--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documentdfese</title>
+    <title>버그수정중</title>
 </head>
 <body>
     <h1>git commit, push, pull</h1>
